<resources>
    <string name="app_name">SignInUp</string>
    <string name="sign_in" translatable="false">Sign In</string>
    <string name="sign_up" translatable="false">Sign Up</string>
    <string name="avatar">Avatar</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="first_name">First name</string>
    <string name="second_name">Second name</string>
    <string name="done">Done</string>
    <string name="exit">Exit</string>
    <string name="wrong_in">Wrong login and password</string>
</resources>